--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
