--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.8.0",
+    "antd": "^5.13.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "next": "^14.0.4",
