--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "oidc-token-hash": "^5.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
