--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
