--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.13.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "lottie-react": "^2.4.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "oidc-token-hash": "^5.0.1",
