--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-slick": "^0.30.1",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
